--- a/UFO-level_1/index.html
+++ b/UFO-level_1/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,7 +16,8 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">UFO Sightings
-            <img class="nav-ufo" src="static/images/ufo.svg">
+            <img class="nav-ufo" src="ufo.svg" alt= "UFO">
+          </a>
           </a>
         </div>
       </div>
@@ -32,12 +33,12 @@
             <div class="panel panel-default">
               <div class="panel-heading">Filter Search</div>
               <div class="panel-body">
-                <form>
+                <form id = "form">
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
                         <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                        <input class="form-control" id="datetime" type="text" placeholder="1/1/2010">
                       </li>
                     </ul>
                   </div>
@@ -61,7 +62,15 @@
                   <th class="table-head">Comments</th>
                 </tr>
               </thead>
-              <tbody></tbody>
+              <tbody>
+                  <th class="table-head-date">Date data</th>
+                  <th class="table-head-city">City data</th>
+                  <th class="table-head-state">State data</th>
+                  <th class="table-head-country">Country data</th>
+                  <th class="table-head-shape">Shape data</th>
+                  <th class="table-head-duration">Duration data</th>
+                  <th class="table-head-comments">Comments data</th>
+              </tbody>
             </table>
           </div>
         </div>
@@ -72,8 +81,8 @@
     </footer>
   </div>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="static/js/data.js"></script>
-  <script src="static/js/app.js"></script>
+  <script src="data.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
