HW clean after Tutor

--- a/UFO-level_1/index.html
+++ b/UFO-level_1/index.html
@@ -63,13 +63,13 @@
                 </tr>
               </thead>
               <tbody>
-                  <th class="table-head-date">Date data</th>
+                  <!-- <th class="table-head-date">Date data</th>
                   <th class="table-head-city">City data</th>
                   <th class="table-head-state">State data</th>
                   <th class="table-head-country">Country data</th>
                   <th class="table-head-shape">Shape data</th>
                   <th class="table-head-duration">Duration data</th>
-                  <th class="table-head-comments">Comments data</th>
+                  <th class="table-head-comments">Comments data</th> -->
               </tbody>
             </table>
           </div>
